Done with lecture 3 and chapter 1.

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -99,5 +99,11 @@
 %electron volt
 \newcommand{\eV}{\mathrm{eV}}
 
+%kiloelectron volt
+\newcommand{\keV}{\mathrm{keV}}
+
+%megaelectron volt
+\newcommand{\MeV}{\mathrm{MeV}}
+
 %gigaelectron volt
 \newcommand{\GeV}{\mathrm{GeV}}
