Working on lecture 4, in SG2.2

--- a/astro400B_lecture_4.tex
+++ b/astro400B_lecture_4.tex
@@ -142,6 +142,78 @@ compute their physical tangential velocity their distances can
 be inferred. It turns out we are $d=8.46\pm0.4~\kpc$ away from
 the Galactic center.
 
+\subsection{Spectroscopic and Photometric Parallax, and Galactic Structure}
+
+The shapes and depths of spectral lines of stars
+depend on properties that correlate with their
+mass and luminosity. Given a measurement of the
+stellar flux, the absolute distances to stars
+can be estimated from their spectra. We call
+this technique the {\it spectroscopic parallax}.
+Similarly, based on the color of star one may
+infer a temperature and then use other information
+to classify the star as a dwarf or giant and
+constrain the mass, intrinsic luminosity, and
+distance. This
+method, called the {\it photometric parallax},
+is less reliable but still widely employed.
+
+Much of what we know about the structure of
+the stellar disk of the Milky Way is inferred
+using these methods. The proper motions of
+many stars in the Milky Way are too small
+to be reliably measured, so the only
+distance estimates that we have come from
+either spectra or photometry. Obviously, 
+photometry is available for many, many more stars!
+
+The shape of the stellar disk can be expressed
+in terms of the radius $R$, vertical height
+$z$, and spectral type $S$ as
+\begin{equation}
+n(R,z,S) = n(0,0,S) \exp\left[-R/h_{R}(S)\right]\exp\left[-|z|/h_{z}(S)\right].
+\end{equation}
+\noindent
+Here, $h_R$ is the disk scale length and $h_z$ is the scale height.
+Sensibly, the scale length and height do depend strongly on the stellar
+type.  The scale height of older and lower mass stars is larger 
+($\sim350~\pc$) than for 
+young and massive stars ($\sim200~\pc$. HI and molecular gas have even 
+smaller scale heights.
+
+{\bf See Figure 2.8 of Sparke and Gallagher.}
+{\bf See Table 2.1 of Sparke and Gallagher.}
+
+\subsection{Star Formation Rate of the Milky Way}
+
+We can use the stellar luminosity of the disk and
+a typical mass to light ratio to infer the disk stellar
+mass. For $L_{\mathrm{disk}}\sim 1.5\times10^{10}\Lsun$
+and $M/L\sim2$ for the most abundant stars, we find
+a stellar mass of $M_{\star}\sim3 \times 10^{10}\Msun$.
+The disk is about $\sim10~\Gyr$ old, and stars loose
+about half their mass in winds over this time when
+averaged over the typical IMF. That means the star
+formation rate in the disk is $\sim(3-5)~\Msun~\yr^{-1}$.
+The cold gas in the Milky Way disk can sustain this
+star formation rate for only a few gigayears.
+
+\subsection{Velocity Dispersion}
+
+The non-zero height of the disk implies that there
+has to be kinematical support of disk stars relative to
+the disk gravitational potential. The vertical velocity
+dispersion is
+\begin{equation}
+\sigma_z^2 \equiv \left\langle v_z^2 - \ave{v_z}^2\right\rangle.
+\end{equation}
+The velocity dispersion of stars tends to increase with their
+age (in conjunction with their scale height). This fattening
+of the disk results from scattering processes that arise from
+the non-uniformity of the disk.
+
+
+
 \end{document}
 
 
