--- a/astro400B_lecture_4.tex
+++ b/astro400B_lecture_4.tex
@@ -210,13 +210,52 @@ dispersion is
 The velocity dispersion of stars tends to increase with their
 age (in conjunction with their scale height). This fattening
 of the disk results from scattering processes that arise from
-the non-uniformity of the disk.
+the non-uniformity of the disk. There are velocity dispersions
+in the other polar directions as well, typically with
+$\sigma_R \ge \sigma_\phi \ge \sigma_z$.
 
+We can also estimate the {\it asymmetric drift} of a star, which
+reflects the orbital velocity lag of the star relative to a 
+circular orbit at the Sun's position. This property will be
+discussed more later.
+
+\section{Stellar Clusters}
+
+Stars in galaxies typically form in {\it clusters}, collections
+of stars that are gravitationally bound or structurally associated
+(loosely bound).
+Stars in a cluster are roughly co-eval, so there is a lot we
+can learn from them!
+
+The Hertzsprung-Russell diagram of the clusters reflect an
+{\it isochrone}, a line corresponding to a single age stellar
+population. The location of the {\it main sequence turn-off}
+indicates the age of the stellar population.
+
+{\bf See Figure 2.12 of Sparke and Gallagher.}
+
+\subsection{Open Clusters}
+
+There are $>1000$ collections of (usually) recently-formed stars
+called {\it open clusters} consisting of stars with
+ages $\lesssim1~\Gyr$, total luminosities of 
+$L\sim100-10,000\Lsun$, and several hundred total stars.
+{\bf See Table 2.2 of Sparke and Gallagher.}
+
+
+\subsection{Globular Clusters}
+
+There are much denser, more massive, and typically older
+collections of stars called {\it globular clusters}.
+Globulars may have luminosities of $10^5-10^6~\sim\Lsun$ 
+and $10^{5}-10^6$ stars. Most of the globulars are more
+than $10\sim\Gyr$ old and very metal poor.
+
+{\bf See Table 2.3 of Sparke and Gallagher.}
+{\bf See Table 2.14 of Sparke and Gallagher.}
 
 
 \end{document}
-
-
 
 
 
