Added text list of figures, updated some lecture.

--- a/astro400B_lecture_4.tex
+++ b/astro400B_lecture_4.tex
@@ -240,6 +240,7 @@ There are $>1000$ collections of (usually) recently-formed stars
 called {\it open clusters} consisting of stars with
 ages $\lesssim1~\Gyr$, total luminosities of 
 $L\sim100-10,000\Lsun$, and several hundred total stars.
+
 {\bf See Table 2.2 of Sparke and Gallagher.}
 
 
@@ -252,7 +253,8 @@ and $10^{5}-10^6$ stars. Most of the globulars are more
 than $10\sim\Gyr$ old and very metal poor.
 
 {\bf See Table 2.3 of Sparke and Gallagher.}
-{\bf See Table 2.14 of Sparke and Gallagher.}
+
+{\bf See Figure 2.14 of Sparke and Gallagher.}
 
 
 \end{document}
