--- a/astro400B_lecture_1.tex
+++ b/astro400B_lecture_1.tex
@@ -174,6 +174,8 @@ in M star spectra.
 
 {\bf See Figure 1.1 of Sparke and Gallagher.}
 
+{\bf See Table 1.1 of Sparke and Gallagher.}
+
 The {\it main sequence} of stars traces a band in the diagram of luminosity and
 temperature (the {\it Hertzsprung-Russell or HR diagram}), and consists of stars that
 shine by burning hydrogen through nuclear fusion. Main sequence stars range in
