Fixed 10^-5 typo for sigma_SB

--- a/astro400B_lecture_1.tex
+++ b/astro400B_lecture_1.tex
@@ -130,7 +130,7 @@ L = 4\pi R^{2}\sigmaSB T^{4}
 \noindent
 where the {\it Stefan-Boltzmann constant} is
 \begin{equation}
-\sigmaSB = 5.670373\times^{-5} \erg~\cm^{-2}~\s^{-1}~\K^{-4}.
+\sigmaSB = 5.670373\times10^{-5} \erg~\cm^{-2}~\s^{-1}~\K^{-4}.
 \end{equation}
 The Stefan-Boltzmann constant can be computed theoretically in
 terms of the speed of light, the {\it Boltzmann constant}
