Fixed Rsun/Lsun typo in Lecture 1.

--- a/astro400B_lecture_1.tex
+++ b/astro400B_lecture_1.tex
@@ -197,7 +197,7 @@ with $M\gtrsim10\Msun$, $L\sim50\Lsun(M/\Msun)^{2.2}$.
 {\it Giant} and {\it supergiant} stars have evolved off the main sequence, and
 have radii and luminosities that are typically much larger than main sequence
 stars of the same effective temperature. Supergiants can have radii of $1000\Rsun$
-and luminosities of $10^{6}\Rsun$.
+and luminosities of $10^{6}\Lsun$.
 
 {\it White dwarf} stars are not on the main sequence, but instead are the
 remains of the core of an evolved star that is supported through electron
