Working on Lecture 5!!!

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -107,3 +107,15 @@
 
 %gigaelectron volt
 \newcommand{\GeV}{\mathrm{GeV}}
+
+%vector velocity
+\newcommand{\vv}{\mathbf{v}}
+
+%vector radius
+\newcommand{\vr}{\mathbf{r}}
+
+%vector position
+\newcommand{\vx}{\mathbf{x}}
+
+%vector force
+\newcommand{\vF}{\mathbf{F}}
